RESOLVED FIXED24753
CSS clip broken with full page zoom
https://bugs.webkit.org/show_bug.cgi?id=24753
Summary CSS clip broken with full page zoom
Simon Fraser (smfr)
Reported 2009-03-22 21:14:45 PDT
The clip rect of CSS clip is not scaled correctly with full-page zoom.
Attachments
Testcase (877 bytes, text/html)
2009-03-22 21:15 PDT, Simon Fraser (smfr)
no flags
Patch, testcase, changelog (6.69 KB, patch)
2009-03-22 21:50 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2009-03-22 21:15:01 PDT
Created attachment 28842 [details] Testcase
Simon Fraser (smfr)
Comment 2 2009-03-22 21:50:45 PDT
Created attachment 28843 [details] Patch, testcase, changelog
Simon Fraser (smfr)
Comment 3 2009-03-23 10:56:03 PDT
Simon Fraser (smfr)
Comment 4 2009-03-24 12:38:38 PDT
This caused bug 24782.
Note You need to log in before you can comment on or make changes to this bug.