2009-03-23  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=24753

        The rect for CSS 'clip' needs to have zooming applied to it.

        Test: fast/css/clip-zooming.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):

Canonical link: https://commits.webkit.org/33968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41911 268f45cc-cd09-0410-ab3c-d52691b4dbfc